--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,7 @@
 // container styles - defines the look of the outer custom componet
 :host {
   position: relative;
+  display: block;
 }
 
 // layout styles - define any layout specifications for UI that is contained WITHIN the component
@@ -62,6 +63,7 @@
 .inputText-label {
   color: var(--color-base-shark);
   left: 0;
+  top: 0;
   pointer-events: none;
   position: absolute;
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -76,7 +78,7 @@
 .inputText-icon {
   position: absolute;
   right: 0;
-  top: 0;
+  top: var(--size-scale-xl);
 
   cursor: pointer;
   background: none;
