--- a/src/style.scss
+++ b/src/style.scss
@@ -58,6 +58,10 @@
     border-color: var(--color-brand-blue-atlas-base);
     border-width: 0 0 var(--border-width-thick);
   }
+
+  &.error {
+    border-color: var(--color-base-chili);
+  }
 }
 
 .inputText-label {
@@ -75,14 +79,15 @@
   color: var(--color-base-shark);
 }
 
+.inputText-errorText {
+  font-size: 0.75rem;
+  color: var(--color-base-chili);
+}
+
 .inputText-icon {
   position: absolute;
   right: 0;
   top: var(--size-scale-xl);
-
-  cursor: pointer;
-  background: none;
-  border: none;
 
   opacity: 0;
   z-index: -1; 
@@ -91,4 +96,13 @@
     opacity: 1;
     z-index: auto;
   }
+}
+
+.alertIcon {
+  color: var(--color-base-chili);
+}
+
+.iconButton {
+  background: none;
+  border: none;
 }
