feat: add invalid functionality and messaging; optional label text

--- a/src/style.scss
+++ b/src/style.scss
@@ -60,6 +60,10 @@
   &.error {
     border-color: var(--color-base-chili);
   }
+
+  &:invalid {
+    box-shadow: none;
+  }
 }
 
 .inputText-label {
