--- a/src/style.scss
+++ b/src/style.scss
@@ -30,7 +30,7 @@
   border: 0 solid var(--color-base-shark);
   border-radius: 0;
   border-width: 0 0 var(--border-width-thick);
-  padding: var(--size-scale-xl) 0 var(--size-scale-sml);
+  padding: var(--size-scale-xl) var(--size-scale-lg) var(--size-scale-sml) 0;
   position: relative;
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
   width: 100%;
