--- a/src/style.scss
+++ b/src/style.scss
@@ -29,7 +29,7 @@
 .inputText {
   border: 0 solid var(--color-base-shark);
   border-radius: 0;
-  border-width: 0 0 var(--border-width-thick);
+  border-width: 0 0 var(--border-width-thin);
   padding: var(--size-scale-xl) var(--size-scale-lg) var(--size-scale-sml) 0;
   position: relative;
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -38,9 +38,13 @@
 
   &:focus {
     border-color: var(--color-brand-blue-atlas-base);
-    & ~ .iconButton {
-      opacity: 1;
-      z-index: auto;
+    & ~ .iconContainer {
+      background: none;
+
+      .iconButton {
+        opacity: 1;
+        z-index: auto;
+      }
     }
   }
 
@@ -50,11 +54,6 @@
       font-size: 0.75rem;
       padding: var(--size-scale-sml) 0;
     }
-  }
-
-  &.focus-visible {
-    border-color: var(--color-brand-blue-atlas-base);
-    border-width: 0 0 var(--border-width-thick);
   }
 
   &.error {
@@ -95,8 +94,8 @@
 .inputText-icon {
   position: absolute;
   right: 0;
-  top: var(--size-scale-xl);
   padding: 0;
+  pointer-events: auto;
 }
 
 .alertIcon {
@@ -118,6 +117,16 @@
   &:hover {
     cursor: pointer;
   }
+}
+
+.iconContainer {
+  background: linear-gradient(-90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0) 73%, rgba(255, 255, 255, 0) 100%);
+  position: absolute;
+  right: 0;
+  top: var(--size-scale-xl);
+  height: var(--size-scale-lg);
+  width: var(--size-scale-xxl);
+  pointer-events: none;
 }
 
 .is-disabled {
