--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,7 @@
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
   width: 100%;
   font-size: var(--size-breakpoint-all-med);
+  caret-color: var(--color-brand-blue-atlas-base);
 
   &:focus {
     border-color: var(--color-brand-blue-atlas-base);
@@ -49,7 +50,7 @@
   }
 
   &:focus,
-  &--filled {    
+  &--filled {
     & + .inputText-label {
       font-size: 0.875rem;
       padding: var(--size-scale-sml) 0 0;
@@ -58,6 +59,7 @@
 
   &.error {
     border-color: var(--color-base-chili);
+    caret-color: var(--color-base-chili);
   }
 
   &:disabled {
@@ -107,7 +109,7 @@
   border: none;
 
   opacity: 0;
-  z-index: -1; 
+  z-index: -1;
 
   &:active {
     opacity: 1;
